[gd_scene load_steps=2 format=2]

[ext_resource path="res://Action RPG Resources/Collision/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
position = Vector2( 0, -8 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="invincible_end" from="." to="." method="_on_Hurtbox_invincible_end"]
[connection signal="invincible_start" from="." to="." method="_on_Hurtbox_invincible_start"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
